# verk-employee-management

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  alembic.ini  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  zeiterfassung_old.xlsx
.claude/: settings.local.json
.claude/agents/: api-documenter.md  architect.md  code-reviewer.md  debugger.md  documenter.md  frontend-dev.md  performance-optimizer.md  python-dev.md  test-runner.md  vc-manager.md
.claude/commands/: approve.md  delegate.md  review.md
.claude/memory/: current-session.md  idea-tracker.md  phase-2-data-models.md  phase-3-business-logic.md  phase-4-api-routes.md  phase-4-implementation-plan.md  phase-5-templates-ui.md  testing-issues.md
.claude/rules/: coding-style.md  memory-protocol.md  orchestrator-model.md  quality-control.md  vaww-compatibility.md
.github/workflows/: ci.yml
data-import/: Zeiterfassung Mama ab 01.07.2025.xlsx  convert_excel_to_csv.py  zeiterfassung_mama.csv
docs/: ci-strategy.md
docs/specs/: zeiterfassung-monthly-view-spec.md
migrations/: env.py
migrations/versions/: 3c6492af3a32_add_vacation_tracking_to_user_settings.py  42b9a05781dd_remove_carryover_hours_from_user_.py  8f6d5a1c3e2b_add_employee_profile_settings.py  9b7c1d2e4f6a_add_vacation_policy_fields.py  b5be5923b848_add_timeentry_and_usersettings_models.py  e385869d5a44_add_tracking_settings_to_user_settings.py
source/api/: app.py  context.py  dependencies.py  exceptions.py
source/core/: holidays.py  i18n.py
source/database/: __init__.py  calculations.py  enums.py  models.py
source/documents/: __init__.py  pdf_generator.py
source/services/: __init__.py  summaries.py  time_calculation.py  vacation_calculation.py  validation.py
static/: site.webmanifest
static/css/: input.css  main.css
static/js/: app.js  toast.js
templates/: base.html
templates/components/: _modal_confirm_delete.html
templates/macros/: _icons.html
templates/pages/: 404.html  422.html  500.html  settings.html  time_entries.html
templates/partials/: _browser_time_entries.html  _detail_time_entry.html  _edit_time_entry.html  _import_result.html  _new_time_entry.html  _row_time_entry.html  _row_time_entry_edit.html  _settings_employee.html  _settings_tracking.html  _settings_vacation.html  _settings_weekday_defaults.html  _summary_month.html  _summary_week.html
tests/: conftest.py  factories.py  test_all_time_balance_verification.py  test_api_summaries.py  test_api_time_entries.py  test_break_bug_nonworking_days.py  test_bug_fixes.py  test_calculations.py  test_enums.py  test_error_handling.py  test_holidays.py  test_import_issues.py  test_issue_9_month_refresh.py  test_issue_m15_template_fix.py  test_keyboard_shortcuts.py  test_models.py  test_optimistic_locking.py  test_quick_absence_buttons.py  test_schemas_time_entry.py  test_settings.py  test_summaries.py  test_template_filters.py  test_template_rendering.py  test_time_calculation_service.py  test_time_input_formatting.py  test_vacation_calculation_service.py  test_vacation_display.py  test_validation.py  test_validation_bugs.py
(+29 files in other folders)
